--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   comment-with-actions:
-    runs on: ubuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: "dump github context"
         run: echo '${{ toJSON(github.event)}}' | jq
