--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -5,7 +5,6 @@ on:
     branches: 
       - main
   pull_request:
-    types: [opened, synchronize]
     branches: 
       - main
   workflow_dispatch:
@@ -25,3 +24,9 @@ jobs:
       - name: goodbye world
         run: echo "goodbye world"
         shell: bash
+
+  depoloy:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: SSH in server 
+        run: 
