--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -1,20 +1,21 @@
-# name: Create a comment on new issues
+name: Create a comment on new issues
 
-# on:
-#   workflow_run:
-#     workflows: ["Hellow world workflow"]
-#     types:
-#       - completed
+on:
+  workflow_run:
+    workflows: ["Hellow world workflow"]
+    types:
+      - completed
 
 
-# jobs:
-#   deploy to server:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - name: "SSH into DigitalOcean Droplet"
-#         uses: appleboy/ssh-action@v0.1.8
-#         with:
-#           host: 178.128.198.31
-#           username: root
-#           key: ${{ secrets.SSH_PRIVATE_KEY }}
-#           port: 22
+jobs:
+  build: 
+    name: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: SSH into DigitalOcean Droplet
+        uses: appleboy/ssh-action@v0.1.8
+        with:
+          host: 178.128.198.31
+          username: root
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
