--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -22,7 +22,8 @@ jobs:
           username: root
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
+          script: whoami
 
-      - name: pull latest code 
-        run: git pull
-        shell: bash
+      # - name: pull latest code 
+      #   run: git pull
+      #   shell: bash
