--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -24,6 +24,10 @@ jobs:
           port: 22
           script: whoami
 
-      # - name: pull latest code 
-      #   run: git pull
-      #   shell: bash
+      - name: Go to working directory
+        run: cd /var/www/backend/BioVatika-Backend
+        shell: bash
+
+      - name: git pull latest code
+        run: git pull 
+        shell: bash
