--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -24,7 +24,7 @@ jobs:
           port: 22
           script: |
             cd /var/www/backend/BioVatika-Backend
-            git pull https://biohazard2117:${{ACCESS_TOKEN}}@github.com
+            git pull https://biohazard2117:${{secrets.ACCESS_TOKEN}}@github.com
 
       # - name: Go to working directory
       #   run: cd /var/www/backend/BioVatika-Backend
