--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -25,7 +25,7 @@ jobs:
           script: |
             cd /var/www/backend/BioVatika-Backend
             git pull https://${{secrets.USERNAME_GITHUB}}:${{secrets.ACCESS_TOKEN}}@github.com/Relish-Repo/BioVatika-Backend.git
-            source venv/bin/activate
+            source ../venv/bin/activate
             pip install -r "requirements.txt"
             python manage.py makemigrations
             python manage.py migrate
