--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -24,7 +24,7 @@ jobs:
           port: 22
           script: |
             cd /var/www/backend/BioVatika-Backend
-            git pull https://${{secrets.USERNAME_GITHUB}}:${{secrets.ACCESS_TOKEN}}@github.com/Relish-Repo/BioVatika-Backend.git origin develop 
+            git pull https://${{secrets.USERNAME_GITHUB}}:${{secrets.ACCESS_TOKEN}}@github.com/Relish-Repo/BioVatika-Backend.git
             source ../venv/bin/activate
           # pip install -r "requirements.txt"
           # python3 manage.py migrate
