--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -26,6 +26,7 @@ jobs:
             cd /var/www/backend/BioVatika-Backend
             git pull https://${{secrets.USERNAME_GITHUB}}:${{secrets.ACCESS_TOKEN}}@github.com/Relish-Repo/BioVatika-Backend.git develop
             source ../venv/bin/activate
+            pip -V
           # pip install -r "requirements.txt"
           # python3 manage.py migrate
           # sudo systemctl restart gunicorn
