--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -24,6 +24,7 @@ jobs:
           port: 22
           script: |
             cd /var/www/backend/BioVatika-Backend
+            pwd
             git pull https://${{secrets.USERNAME_GITHUB}}:${{secrets.ACCESS_TOKEN}}@github.com/Relish-Repo/BioVatika-Backend.git develop
             source ../venv/bin/activate
             pip -V
