--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Debug
+      run: |
+        echo "GitHub Workspace: $GITHUB_WORKSPACE"
+        ls -la $GITHUB_WORKSPACE
+        ssh -i \${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79
     # - name: Checkout code
     #   uses: actions/checkout@v2
 
@@ -22,8 +27,8 @@ jobs:
     # - name: Copy files to Droplet
     #   run: scp -r -i ${{ secrets.SSH_PRIVATE_KEY }} ./build/* <USERNAME>@<DROPLET_IP_ADDRESS>:/var/www/html/
 
-    - name: Restart Apache
-      run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79 "ls"
+    # - name: Restart Apache
+    #   run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79 "ls"
     
       # - name: SSH into Droplet & Git pull & restart Droplet
       #   uses: appleboy/ssh-action@v0.1.8
