--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,19 +10,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Debug
-      run: |
-        echo "GitHub Workspace: $GITHUB_WORKSPACE"
-        ls -la $GITHUB_WORKSPACE
-        ssh -i \${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79
-    # - name: Checkout code
-    #   uses: actions/checkout@v2
+    # - name: Debug
+    #   run: |
+    #     echo "GitHub Workspace: $GITHUB_WORKSPACE"
+    #     ls -la $GITHUB_WORKSPACE
+    #     ssh -i \${{ secrets.SSH_PRIVATE_KEY }} root@host
 
-    # - name: Install dependencies
+    # - name: Checkout code
+    #   uses: actions/checkout@v3
+
+    # - uses: actions/checkout@v3
+    # - name: Install Node.js
+    #   uses: actions/setup-node@v3
+    #   with:
+    #     node-version: '16.x'
+
+    # - name: Install npm dependencies
     #   run: npm install
 
-    # - name: Build app
-    #   run: npm run build
+    # - name: Run build task
+    #   run: npm run build --if-present
 
     # - name: Copy files to Droplet
     #   run: scp -r -i ${{ secrets.SSH_PRIVATE_KEY }} ./build/* <USERNAME>@<DROPLET_IP_ADDRESS>:/var/www/html/
@@ -30,15 +37,15 @@ jobs:
     # - name: Restart Apache
     #   run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79 "ls"
     
-      # - name: SSH into Droplet & Git pull & restart Droplet
-      #   uses: appleboy/ssh-action@v0.1.8
-      #   with:
-      #     host: 143.110.146.79
-      #     username: root
-      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     port: 22
-      #     script: |
-      #       ls
+    - name: SSH into Droplet & Git pull & restart Droplet
+      uses: appleboy/ssh-action@v0.1.8
+      with:
+        host: 143.110.146.79
+        username: root
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        port: 22
+        script: |
+          ls
 
       # - name: Deploy to Staging server
       #   uses: easingthemes/ssh-deploy@main
