give another try

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,29 +37,29 @@ jobs:
     # - name: Restart Apache
     #   run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79 "ls"
     
-    - name: SSH into Droplet & Git pull & restart Droplet
-      uses: appleboy/ssh-action@v0.1.8
-      with:
-        host: 143.110.146.79
-        username: root
-        key: ${{ secrets.SSH_PRIVATE_KEY }}
-        port: 22
-        script: |
-          ls
+    # - name: SSH into Droplet & Git pull & restart Droplet
+    #   uses: appleboy/ssh-action@v0.1.8
+    #   with:
+    #     host: 143.110.146.79
+    #     username: root
+    #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+    #     port: 22
+    #     script: |
+    #       ls
 
-      # - name: Deploy to Staging server
-      #   uses: easingthemes/ssh-deploy@main
-      #   env:
-      #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-      #     SOURCE: "dist/"
-      #     REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-      #     REMOTE_USER: ${{ secrets.REMOTE_USER }}
-      #     TARGET: ${{ secrets.REMOTE_TARGET }}
-      #     EXCLUDE: "/dist/, /node_modules/"
-      #     SCRIPT_BEFORE: |
-      #       whoami
-      #       ls -al
-      #     SCRIPT_AFTER: |
-      #       whoami
-      #       ls -al
-      #   echo $RSYNC_STDOUT
+      - name: Deploy to Staging server
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          # SOURCE: "dist/"
+          # REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          # REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          # TARGET: ${{ secrets.REMOTE_TARGET }}
+          # EXCLUDE: "/dist/, /node_modules/"
+          SCRIPT_BEFORE: |
+            whoami
+            ls -al
+          SCRIPT_AFTER: |
+            whoami
+            ls -al
+        echo $RSYNC_STDOUT
