--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,8 +52,8 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           # SOURCE: "dist/"
-          # REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-          # REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_HOST: 143.110.146.79
+          REMOTE_USER: root
           # TARGET: ${{ secrets.REMOTE_TARGET }}
           # EXCLUDE: "/dist/, /node_modules/"
           SCRIPT_BEFORE: |
