--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,10 +26,7 @@ jobs:
     - name: Run build task
       run: npm run build --if-present
 
-    - name: see the directory
-      run: |
-        cd ./build
-        ls
+
 
     # - name: Restart Apache
     #   run: ssh -i ${{ secrets.SSH_PRIVATE_KEY }} root@143.110.146.79 "ls"
@@ -44,17 +41,17 @@ jobs:
     #     script: |
     #       ls
 
-    # - name: Deploy to Staging server
-    #   uses: easingthemes/ssh-deploy@main
-    #   env:
-    #     SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-    #     # SOURCE: "./build/"
-    #     REMOTE_HOST: 143.110.146.79
-    #     REMOTE_USER: root
-    #     # TARGET: /var/www/test/
-    #     # EXCLUDE: "/dist/, /node_modules/"
-    #     SCRIPT_BEFORE: |
-    #       whoami
-    #     SCRIPT_AFTER: |
-    #       cd /var/www/html/
-    #       pwd
+    - name: Deploy to Staging server
+      uses: easingthemes/ssh-deploy@main
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        SOURCE: "./build/*"
+        REMOTE_HOST: 143.110.146.79
+        REMOTE_USER: root
+        TARGET: /var/www/test/
+        # EXCLUDE: "/dist/, /node_modules/"
+        # SCRIPT_BEFORE: |
+        #   whoami
+        # SCRIPT_AFTER: |
+        #   cd /var/www/html/
+        #   pwd
