--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,38 +1,108 @@
-name: Deploy to DigitalOcean
+name: Validation_Gauntlet
 
 on:
+  pull_request:
+    branches:
+      - develop
   push:
     branches:
-      - main
+      - develop
+  workflow_dispatch:
 
 jobs:
-  deploy:
+  install:
     runs-on: ubuntu-latest
 
     steps:
-
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - uses: actions/checkout@v3
-    - name: Install Node.js
-      uses: actions/setup-node@v3
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        node-version: '16.x'
+        python-version: 3.x
 
-    - name: Install npm dependencies
-      run: npm install
+    - name: Install virtualenv
+      run: pip install virtualenv
 
-    - name: Run build task
-      run: npm run build --if-present
+    - name: Create virtual environment
+      run: virtualenv venv
 
-    - name: Deploy to Staging server
-      uses: easingthemes/ssh-deploy@main
-      env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        SOURCE: "./build/*"
-        REMOTE_HOST: 143.110.146.79
-        REMOTE_USER: root
-        TARGET: /var/www/test/
-        SCRIPT_AFTER: |
-          sudo nginx -t && sudo systemctl restart nginx
+    - name: Activate virtual environment
+      run: source venv/bin/activate
+
+    - name: Install dependencies
+      run: pip install -r requirements.txt
+
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: venv
+        key: ${{ runner.os }}-venv-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-venv-
+
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   needs: install
+
+  #   steps:
+  #   - name: Checkout code
+  #     uses: actions/checkout@v3
+
+  #   - name: Set up Python
+  #     uses: actions/setup-python@v3
+  #     with:
+  #       python-version: 3.x
+
+  #   - name: Restore virtual environment from cache
+  #     uses: actions/cache@v3
+  #     with:
+  #       path: venv
+  #       key: ${{ runner.os }}-venv-${{ hashFiles('requirements.txt') }}
+  #       restore-keys: |
+  #         ${{ runner.os }}-venv-
+  #   - name: Activate virtual environment
+  #     run: |
+  #       source venv/bin/activate
+
+  #   - name: Install flake8
+  #     run: pip install flake8
+    
+  #   - name: Lint code
+  #     run: |
+  #       flake8 .
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [install]
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
+
+    - name: Restore virtual environment from cache
+      uses: actions/cache@v3
+      with:
+        path: venv
+        key: ${{ runner.os }}-venv-${{ hashFiles('requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-venv-
+
+    - name: Activate virtual environment
+      run: source venv/bin/activate
+
+    # - name: Install dependencies
+    #   run: pip install -r requirements.txt
+
+    - name: Make log files folder 
+      run: mkdir log_files
+      
+    - name: Build project
+      run: |
+        python manage.py check
