dockerising the content

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,10 +31,25 @@ jobs:
     #       script: |
     #         ls
     #         pwd
+
+
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Build application
+        run: |
+          npm ci
+          npm run build
+
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -44,5 +59,3 @@ jobs:
           port: 22
           source: "manage.py"
           target: /root/test/
-          script: |
-            pwd 
