--- a/config/nginx/conf.d/local.conf
+++ b/config/nginx/conf.d/local.conf
@@ -8,11 +8,11 @@ server {
     server_name localhost;
 
     location /static/ {
-        alias /code/static/;
+        alias /backend/static/;
     }
 
     location /media/ {
-        alias /code/media/;
+        alias /backend/media/;
     }
 
     location / {
